// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Weather render should render Unknown forecast 1`] = `
<span
  className="CM-weather-forecast"
>
  Weather - 
  Unknown
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</span>
`;

exports[`Weather render should render the forecast 1`] = `
<span
  className="CM-weather-forecast"
>
  Weather - 
  Gusty, Drizzle
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</span>
`;

exports[`Weather render should render the forecast and temperature 1`] = `
<span
  className="CM-weather-forecast"
>
  Weather - 
  Gusty, Drizzle
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": ", 10&deg;C",
      }
    }
  />
</span>
`;
